@@ -1,3 +1,8 @@
+2011-06-09  Emilio Meschi <emilio.meschi@cern.ch>
+	
+	* tag V00-19-15
+	* bug fixes in MsgBuf and change MicroState interface
+	
 2011-05-23  Emilio Meschi <emilio.meschi@cern.ch>
 	
 	* tag V00-19-14
